fixing some bugs on smaller devices

--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,7 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 2.4em;
+  font-size: 2.4rem;
   color: var(--purple);
   border-radius: 50%;
   filter: drop-shadow(3px 3px 1px rgba(0, 0, 0, .7));
@@ -103,7 +103,7 @@ a {
 #view-galery {
   max-height: 100%;
   padding: .5rem;
-  font-size: 3em;
+  font-size: 2.6rem;
   color: var(--purple);
   border-radius: 50%;
   filter: drop-shadow(3px 3px 1px rgba(0, 0, 0, .7));
@@ -128,7 +128,7 @@ a {
   justify-content: center;
   max-height: 100%;
   padding: .5rem;
-  font-size: 3em;
+  font-size: 2.6rem;
   border-radius: 50%;
   border: 3px solid white;
   filter: drop-shadow(3px 3px 1px rgba(0, 0, 0, .7));
@@ -148,7 +148,7 @@ a {
   justify-content: center;
   max-height: 100%;
   padding: .5rem;
-  font-size: 3em;
+  font-size: 2.6rem;
   color: var(--purple);
   border-radius: 50%;
   filter: drop-shadow(3px 3px 1px rgba(0, 0, 0, .7));
